<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/email_sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <com.gjjy.basiclib.widget.Toolbar
        android:id="@+id/email_sign_up_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="18dp"
                android:text="@string/stringEmailSignUp"
                android:textColor="@color/color66"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_sign_up_tv_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/stringEmailHaveEmail"
                android:textColor="@color/color9A"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_sign_up_ev_name"
                style="@style/EmailEditStyle"
                app:evEnableCheckButton="false"
                app:evHint="@string/stringNameHint"
                app:evIcon="@drawable/ic_email_name"
                app:evMaxLength="25"
                app:evTipsText="@string/stringNameTips" />

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_sign_up_ev_email"
                style="@style/EmailEditStyle"
                app:evEnableCheckButton="false"
                app:evHint="@string/stringEmailHint"
                app:evIcon="@drawable/ic_email"
                app:evMaxLength="25"
                app:evTipsText="@string/stringEmailTips" />

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_sign_up_ev_pwd"
                style="@style/EmailEditStyle"
                app:evHint="@string/stringEmailPasswordTips"
                app:evIcon="@drawable/ic_email_password"
                app:evMaxLength="25"
                app:evTipsText="@string/stringEmailPasswordTips" />

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_sign_up_ev_check_pwd"
                style="@style/EmailEditStyle"
                app:evHint="@string/stringEmailConfirmPasswordHint"
                app:evIcon="@drawable/ic_email_password"
                app:evMaxLength="25"
                app:evTipsText="@string/stringEmailConfirmPasswordTips" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mobile_num_pre"
                    android:layout_width="60dp"
                    android:layout_height="42dp"
                    android:textColor="#b75134"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_popup_arrow"
                    android:layout_marginStart="40dp" />

                <com.gjjy.basiclib.widget.EditView
                    android:id="@+id/email_sign_up_ev_mobile"
                    style="@style/MobileEditStyle"
                    android:layout_marginStart="10dp"
                    android:inputType="phone"
                    app:evEnableCheckButton="false"
                    app:evHint="@string/stringEmailMobileNumHint"
                    app:evMaxLength="25" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.gjjy.basiclib.widget.EditView
                    android:id="@+id/email_sign_up_ev_verify_code"
                    style="@style/MobileEditStyle"
                    android:layout_marginStart="40dp"
                    app:evEnableCheckButton="false"
                    app:evHint="@string/stringEmailMobileVerifyCodeHint"
                    app:evMaxLength="25" />

                <TextView
                    android:id="@+id/email_sign_up_btn_send"
                    android:layout_width="60dp"
                    android:layout_height="42dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="5dp"
                    android:background="#b75134"
                    android:gravity="center"
                    android:text="@string/stringEmailMobileVerifyCodeButton"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/email_sign_up_tv_sign_up_btn"
                android:layout_width="300dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_touch_btn_false"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/stringSignUpBtn"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:contentDescription="@string/stringEmpty"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_login_bottom_bg" />
        </LinearLayout>
    </ScrollView>

    <!--    <Space-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"/>-->
</LinearLayout>