<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/email_update_password_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.gjjy.basiclib.widget.Toolbar
        android:id="@+id/email_update_password_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringEmailResetPwdTitle"
                android:textSize="28sp"
                android:textColor="@color/color66"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"/>

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_update_password_ev_old_pwd"
                app:evHint="@string/stringEmailOldPasswordHint"
                app:evTipsText="@string/stringEmailOldPasswordTips"
                app:evMaxLength="25"
                style="@style/EmailEditStyle"/>

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_update_password_ev_pwd"
                app:evHint="@string/stringEmailNewPasswordTips"
                app:evTipsText="@string/stringEmailNewPasswordTips"
                app:evMaxLength="25"
                style="@style/EmailEditStyle"/>

            <com.gjjy.basiclib.widget.EditView
                android:id="@+id/email_update_password_ev_check_pwd"
                app:evHint="@string/stringEmailConfirmPasswordHint"
                app:evTipsText="@string/stringEmailConfirmPasswordTips"
                app:evMaxLength="25"
                style="@style/EmailEditStyle"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/email_update_password_tv_save_btn"
                android:layout_width="300dp"
                android:layout_height="57dp"
                android:text="@string/stringSaveBtn"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/ic_touch_btn_true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:focusable="true"
                android:clickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:src="@drawable/ic_login_bottom_bg"
                android:scaleType="centerCrop"
                android:contentDescription="@string/stringEmpty" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>